fix: add styles for dark mode: colors

--- a/src/assets/styles/components/_select.scss
+++ b/src/assets/styles/components/_select.scss
@@ -288,48 +288,3 @@
     }
   }
 }
-
-[data-theme="dark"] {
-  .select {
-    $this: &;
-
-    &__options {
-      color: var(--grey-50);
-      background-color: var(--grey-600);
-      .option--active {
-        background: var(--grey-700);
-      }
-    }
-
-    &__option {
-      &:hover {
-        background-color: var(--grey-800);
-      }
-
-      &__meta {
-        color: var(--grey-500);
-      }
-    }
-
-    &__top {
-      border-bottom: 1px solid var(--grey-100);
-    }
-
-    &__footer {
-      border-top: 1px solid var(--grey-100);
-    }
-
-    &--menu {
-      background-color: var(--grey-900);
-      color: var(--grey-50);
-    }
-
-    &--multi {
-      .input {
-        input {
-          color: var(--grey-900);
-        }
-      }
-    }
-  }
-}
